# falcon

./: .gitignore  404.html  CLAUDE.md  DESIGN.md  EMBEDDING_NOTES.md  EXPLOSION_NOTES.md  GRAPH_EXAMPLES.txt  README.md  SBI_comparison_script.py  adam.py  gaussian_2dim.py  gaussian_full_cov.py  gaussian_lr.py  gaussian_lr2.py  gaussian_lr3.py  gaussian_lr5.py  gaussian_ndim.py  gaussian_test.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_falcon.sh  sbi_comparison.ipynb  setup.py  sitemap.xml  test_backprop.py  test_embedding.py  test_integration.py  test_missing_keys.py  test_simplified_debug.py  verify_embedding_structure.py
.github/workflows/: docs.yml  tests.yml
api/: index.html
api/base-estimator/: index.html
api/deployed-graph/: index.html
api/embeddings/: index.html
api/flow/: index.html
api/flow-density/: index.html
api/gaussian/: index.html
api/graph/: index.html
api/hypercube/: index.html
api/hypercube-prior/: index.html
api/product/: index.html
api/snpe-a/: index.html
configuration/: index.html
docs/: configuration.md  getting-started.md  index.md
docs/api/: base-estimator.md  deployed-graph.md  embeddings.md  flow-density.md  flow.md  gaussian.md  graph.md  hypercube-prior.md  hypercube.md  index.md  product.md  snpe-a.md
docs/estimators/: SNPE_A.md
estimators/SNPE_A/: index.html
examples/: ray_object_store_speed_test.py  run_all.sh  streaming_pca.ipynb  streaming_pca.py  zarr_speed_test.py
examples/01_minimal/: config.yaml  config.yml  config_gaussian.yaml  make_plots.py  notebook.ipynb  notebook.py
examples/02_bimodal/: config_amortized.yaml  config_amortized.yml  config_gfm.yml  config_regular.yaml  config_regular.yml  config_rounds_fill.yaml  config_rounds_fill.yml  config_rounds_renew.yaml  config_rounds_renew.yml
examples/02_pca/: config.yaml  implementation_status.yaml  plots.ipynb  script.sh
examples/03_composite/: config.yaml  config.yml  plot_prior_samples.ipynb  plot_samples.ipynb  test_model.ipynb
examples/03_pca/: config.yaml  example.yaml  implementation_status.yaml  script.sh
examples/04_bimodal/: config.yaml  config_amortized.yaml  config_regular.yaml  config_rounds_fill.yaml  config_rounds_renew.yaml  plots.ipynb
examples/04_gaussian/: config.yaml  config.yml  config_full_cov.yml  notebook.ipynb  notebook.py  run.py  run_example.py
examples/04_scaffolding/: config.yaml  plot_samples.ipynb
examples/05_linear_regression/: config.yaml  config.yml  plot_posterior.py  run.py  run_example.py  standalone.py
examples/06_bimodal_SNPE_C/: config.yaml  config_amortized.yaml  config_regular.yaml  config_rounds_fill.yaml  config_rounds_renew.yaml  plot.py  plot_corner_loss.py
examples/06_gaussianized_flow_matching/: analyze.py  config.yml
examples/06_spectral_analysis/: PhaseFormer.md  config.yml  config2.yml  config3.yml  config4.yml  config_combined.yml  make_animation.py  make_fisher_estimate.py  make_plots.py  make_plots2.py  make_prior_samples_plot.py  make_spectrum_animation.py  summarize_posterior.py
examples/07_letters/: config.yml  make_gif.py
examples/08_letters_noise/: config.yml  make_gif.py
examples/09_two_words/: config.yml  make_gif.py
examples/10_scene/: config.yml  make_gif.py
examples/11_flow_words/: config.yml  make_gif.py
examples/12_four_components/: config.yml  make_gif.py
examples/13_five_components/: config.yml  make_gif.py
examples/14_hierarchical/: config.yml  (+1 more)
falcon/: __init__.py  api.py  cli.py  interactive.py  monitor.py
getting-started/: index.html
plans/: COLAB_API_PLAN.md  EMBEDDING_NOTES.md  GAUSSIANIZED_FLOW_MATCHING.md  LOGGING_PLAN.md  MINIMAL_PLAN.md  PLAN.md  PLAN_CACHED_DATALOADER.md  PLAN_NOISE_RESAMPLING.md  PLAN_NO_HYDRA.md  PLAN_REFACTOR.md  PLAN_TESTS.md  PLAN_TUI.md  POTENTIAL_PLANS.md  plan.md
search/: search_index.json
test/: test_backprop.py  test_embedding.py  test_integration.py  test_missing_keys.py  test_simplified_debug.py  verify_embedding_structure.py
tests/: test_batch.py  test_examples_smoke.py  test_graph_validation.py  test_initial_samples.py  test_run_reader.py  test_samples_reader.py  test_snapshotting.py
(+159 files in other folders)
