[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "falcon-sbi"
dynamic = ["version"]
description = "CLI-driven framework for simulation-based inference with large simulators"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Christoph Weniger" },
]
keywords = ["simulation-based-inference", "sbi", "bayesian", "pytorch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.16",
    "ray>=2.0",
    "omegaconf>=2.1",
    "coolname>=1.0",
]

[project.optional-dependencies]
sbi = ["sbi>=0.18"]
wandb = ["wandb>=0.15.0"]
blessed = ["blessed>=1.20"]
all = ["sbi>=0.18", "wandb>=0.15.0", "blessed>=1.20"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
falcon = "falcon.cli:main"

[project.urls]
Homepage = "https://github.com/cweniger/falcon"
Documentation = "https://cweniger.github.io/falcon/"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
include = ["falcon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    'slow: marks tests as slow (deselect with "-m \"not slow\"")',
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
